<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#000">

 <ImageButton
     android:id="@+id/Boton_Atras"
     android:layout_width="45dp"
     android:layout_height="52dp"
     android:layout_x="132dp"
     android:layout_y="393dp"
     android:background="@null"
     android:contentDescription="@string/Atras"
     android:src="@drawable/atras" />

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="80dp"
     android:layout_x="28dp"
     android:layout_y="85dp"
     android:shadowColor="#2E2EFE"
     android:shadowDx="3"
     android:shadowDy="7"
     android:shadowRadius="3.0"
     android:text="@string/multijugador_construccion"
     android:textColor="#FFF"
     android:textSize="56dp" />

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_x="21dp"
     android:layout_y="188dp"
     android:shadowColor="#2E2EFE"
     android:shadowDx="3"
     android:shadowDy="7"
     android:shadowRadius="3.0"
     android:text="@string/multijugador_construccion_1"
     android:textColor="#FFF"
     android:textSize="45dp" />

</AbsoluteLayout>