<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:ignore="MissingPrefix" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/Nuevo_Jugador"
        android:textColor="#F00"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Usuario_Nuevo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <AbsoluteLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp" >

        <ImageButton
            android:id="@+id/Boton_Crear_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="210dp"
            android:layout_y="119dp"
            android:background="@null"
            android:contentDescription="@string/Continuar"
            android:src="@drawable/ok" />

        <ImageButton
            android:id="@+id/Boton_Atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="66dp"
            android:layout_y="115dp"
            android:background="@null"
            android:contentDescription="@string/Atras"
            android:src="@drawable/atras" />
    </AbsoluteLayout>

</LinearLayout>